# DIT_OOP_PROJECT_1

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DIT_OOP_PROJECT_1  README.md  cmake_install.cmake  file.db  gitattributes  main.cpp
CatchTesting/: CMakeLists.txt
CatchTesting/source/: database.cpp  database.h  test.cpp  testMethods.cpp  testMethods.h
data/: file.db
source/: database.cpp  database.h  mainFrame.cpp  mainFrame.h  myApp.cpp  myApp.h  pomodoro.cpp  pomodoro.h
